# FinanzHub

./: .env.portainer.example  Dockerfile  README.md  docker-compose.portainer.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  synology-fix-ownership.sh
.github/workflows/: docker-publish.yml
app/: cli.py  config_loader.py  logger.py  main.py  scheduler.py
app/alerts/: __init__.py
app/banking/: demo_client.py  enable_banking_client.py  fints_adapter.py
app/core/: forecast_engine.py  nk_calculator.py  real_estate_model.py  rentability_engine.py
app/data/: dedup.py  price_service.py
app/inbox/: __init__.py  attachment_handler.py  (+5 more)
config.example/: banks.yaml  inbox.yaml  notifications.yaml  settings.yaml
docs/: DEVELOPMENT.md  INBOX.md  INTEGRATION.md  PORTAINER.md  README.md  USAGE.md
finanzhub/: .coverage  .env.example  README.md  pyproject.toml  requirements-dev.txt
finanzhub/.github/workflows/: ci.yml
finanzhub/app/: __init__.py  config_loader.py  main.py  scheduler.py
finanzhub/app/alerts/: payment_monitor.py  rent_matcher.py  substance_monitor.py
finanzhub/app/banking/: __init__.py  base.py  csv_adapter.py
finanzhub/app/core/: __init__.py  cashflow_engine.py  portfolio_engine.py
finanzhub/app/data/: __init__.py  bank_collector.py  db.py  event_detector.py
finanzhub/app/notifications/: __init__.py  engine.py
finanzhub/app/output/: __init__.py  csv_exporter.py  mail_service.py  report_generator.py
finanzhub/app/templates/: daily_wealth_report.txt.j2  event_generic.html.j2  event_generic.txt.j2  monthly_portfolio.html.j2  quarterly_summary.txt.j2  rent_matrix.txt.j2
finanzhub/config.example/: assets.yaml  forecast.yaml  immobilien.yaml  income.yaml  mail.yaml
finanzhub/docs/: DEVELOPMENT.md  README.md
finanzhub/tests/: conftest.py
finanzhub/tests/fixtures/: assets.yaml  banks_demo.yaml
finanzhub/tests/integration/: test_notification_engine.py
finanzhub/tests/unit/: test_cli.py  test_config_loader.py  test_csv_exporter.py  test_event_detector.py  test_forecast_engine.py  test_mail_service.py  test_payment_monitor.py  test_report_generator.py
migrations/: 001_initial_schema.sql  002_add_events.sql  003_add_notification_log.sql  005_add_receipts.sql
(+36 files in other folders)
